fix: correct height for scrollbar

--- a/src/scss/scrollbar.scss
+++ b/src/scss/scrollbar.scss
@@ -1,6 +1,6 @@
 ::-webkit-scrollbar {
   width: 0.5rem;
-  height: 1rem;
+  height: 0.5rem;
   background-color: transparent;
   border-radius: 2rem;
 }
